feat(web): add dynamic daisyui themes

--- a/packages/web/src/app.css
+++ b/packages/web/src/app.css
@@ -16,3 +16,11 @@
     @apply text-lg;
   }
 }
+
+@layer components {
+
+  button,
+  .btn:not(.btn-primary) {
+    @apply text-base-content;
+  }
+}
